--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "scripts": {
     "build": "echo building... && typings bundle -o out",
     "lint": "echo linting... && tslint \"**/*.ts\" -e \"out/**\" -e \"node_modules/**\" -e \"typings/**\"",
-    "test": "echo testing... && cd test && ts-node ../node_modules/blue-tape/bin/blue-tape \"**/*.ts\" | tap-spec",
+    "test": "echo testing... && cd test && tsc",
     "watch": "onchange \"**/*.ts\" -i -e \"out/**\" -- npm -s run build+test",
     "publish": "npm -s run lint+build+test && echo please publish to typings/registry",
     "build+test": "npm run build && npm run test",
@@ -11,12 +11,9 @@
     "prepublish": "typings install"
   },
   "devDependencies": {
-    "blue-tape": "^0.2.0",
     "d3": "^3.5.16",
     "nvd3": "1.8.3",
     "onchange": "^2.2.0",
-    "tap-spec": "^4.1.1",
-    "ts-node": "^0.7.1",
     "tslint": "^3.7.0",
     "tslint-config-typings": "^0.2.0",
     "typescript": "^1.8.9",
